architecture model done

--- a/Batik_CNN.ipynb
+++ b/Batik_CNN.ipynb
@@ -932,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a5b9468c",
+   "id": "a6a849c9",
    "metadata": {
     "collapsed": true
    },
@@ -1803,7 +1803,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2bf53ce6",
+   "id": "2c2a8302",
    "metadata": {
     "collapsed": true
    },
@@ -2674,7 +2674,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "01e52d47",
+   "id": "b33472b1",
    "metadata": {},
    "outputs": [
     {
@@ -2705,7 +2705,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3461d58c",
+   "id": "0ec8ca95",
    "metadata": {},
    "outputs": [
     {
@@ -2796,7 +2796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "736011b8",
+   "id": "4ee0a5a6",
    "metadata": {},
    "source": [
     "## Plot images"
@@ -2805,7 +2805,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "47fb5981",
+   "id": "37742ba4",
    "metadata": {},
    "outputs": [
     {
@@ -2879,7 +2879,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "075ea5ef",
+   "id": "b291cd15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2889,7 +2889,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "958055f7",
+   "id": "2e56e992",
    "metadata": {},
    "outputs": [
     {
@@ -2921,7 +2921,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "169f1a95",
+   "id": "376552d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2957,7 +2957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "777558ab",
+   "id": "91d08efa",
    "metadata": {},
    "source": [
     "### Cek "
@@ -2966,7 +2966,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "e742ff7d",
+   "id": "47d2b9e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2976,7 +2976,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "f478f788",
+   "id": "d73ad7b9",
    "metadata": {},
    "outputs": [
     {
@@ -3008,22 +3008,89 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15c47836",
+   "id": "72e83ab0",
    "metadata": {},
-   "source": []
+   "source": [
+    "## model architecture"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d88cd533",
+   "execution_count": 89,
+   "id": "31d9ccd2",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class CNN(nn.Module) :\n",
+    "    def __init__(self) :\n",
+    "        super().__init__()\n",
+    "        self.conv = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=3, out_channels=8, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
+    "            nn.Conv2d(in_channels=8, out_channels=16, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
+    "            nn.Conv2d(in_channels=16, out_channels=32, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
+    "            nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
+    "            nn.Conv2d(in_channels=64, out_channels=128, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
+    "            nn.Flatten()\n",
+    "        )\n",
+    "        self.fc = nn.Sequential(\n",
+    "            nn.Linear(in_features=2048, out_features=1024),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(in_features=1024, out_features=7),\n",
+    "            nn.LogSoftmax()\n",
+    "        )\n",
+    "    def foward(self, x) :\n",
+    "        x = self.conv(x)\n",
+    "        x = self.fc(x)\n",
+    "        return x\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "ab30a268",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "??nn.Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "c2144ccf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mappingproxy({'__module__': '__main__',\n",
+       "              '__init__': <function __main__.CNN.__init__(self)>,\n",
+       "              'foward': <function __main__.CNN.foward(self, x)>,\n",
+       "              '__doc__': None})"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62954e79",
+   "id": "08671a80",
    "metadata": {},
    "outputs": [],
    "source": []
