--- a/Batik_CNN.ipynb
+++ b/Batik_CNN.ipynb
@@ -391,6 +391,76 @@
   },
   {
    "cell_type": "markdown",
+   "id": "270c3962",
+   "metadata": {},
+   "source": [
+    "### Early-Stopping Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16efa895",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EarlyStopping() :\n",
+    "    #    Early stops the training if validation loss doesn't improve after a given patience.\n",
+    "    def __init__(self, patience=5, delta=0, verbose= False, path='checkpoint.pt', trace_func=print) :\n",
+    "        \n",
+    "        #Args:\n",
+    "        #   patience (int): How long to wait after last time validation loss improved.\n",
+    "        #                    Default: 7\n",
+    "        #    verbose (bool): If True, prints a message for each validation loss improvement. \n",
+    "        #                    Default: False\n",
+    "        #    delta (float): Minimum change in the monitored quantity to qualify as an improvement.\n",
+    "        #                    Default: 0\n",
+    "        #    path (str): Path for the checkpoint to be saved to.\n",
+    "        #                    Default: 'checkpoint.pt'\n",
+    "        #    trace_func (function): trace print function.\n",
+    "        #                    Default: print            \n",
+    "                \n",
+    "        self.patience = patience\n",
+    "        self.verbose = verbose\n",
+    "        self.counter = 0\n",
+    "        self.best_score = None\n",
+    "        self.early_stop = False\n",
+    "        self.val_loss_min = np.Inf\n",
+    "        self.delta = delta\n",
+    "        self.path = path\n",
+    "        self.trace_func = trace_func\n",
+    "        \n",
+    "    def __call__(self, val_loss, model) :\n",
+    "        \n",
+    "        score = -val_loss\n",
+    "\n",
+    "        if self.best_score is None :\n",
+    "            self.best_score = score\n",
+    "            self.save_checkpoint(val_loss, model)\n",
+    "            \n",
+    "        elif score < self.best_score + self.delta :\n",
+    "            self.counter += 1\n",
+    "            self.trace_func(f'\\n |EarlyStopping counter: {self.counter} out of {self.patience}|')\n",
+    "            \n",
+    "            # early stopping\n",
+    "            if self.counter >= self.patience :\n",
+    "                self.early_stop = True\n",
+    "        \n",
+    "        else :\n",
+    "            self.best_score = score\n",
+    "            self.save_checkpoint(val_loss, model)\n",
+    "            self.counter = 0\n",
+    "        \n",
+    "    #save checkpoint\n",
+    "    def save_checkpoint (self, val_loss, model) :\n",
+    "        if self.verbose:\n",
+    "            self.trace_func(f'\\nValidation loss decreased ({self.val_loss_min:.6f} --> {val_loss:.6f}).  Saving model ...')\n",
+    "        torch.save(model.state_dict(), self.path)\n",
+    "        self.val_loss_min = val_loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dcdbac93",
    "metadata": {},
    "source": [
@@ -452,7 +522,7 @@
     "    if mode ==\"train\" :\n",
     "        model.train()\n",
     "    \n",
-    "    elif mode ==\"val\" :\n",
+    "    elif mode ==\"val\" or mode == \"test\":\n",
     "        model.eval()\n",
     "    \n",
     "    cost = correct = 0\n",
@@ -484,12 +554,54 @@
    },
    "outputs": [],
    "source": [
-    "#test\n",
+    "# #test\n",
     "\n",
-    "epochs = 12\n",
+    "# epochs = 12\n",
+    "# train_cost, val_cost = [], []\n",
+    "# train_acc, val_acc = [], []\n",
+    "# for i in range (epochs) :\n",
+    "#     since = time.time()\n",
+    "    \n",
+    "#     # training for data train\n",
+    "#     cost, acc = looping(\"train\", train_set, train_loader, model, criterion, optimizer, device)\n",
+    "#     train_cost.append(cost)\n",
+    "#     train_acc.append(acc)\n",
+    "    \n",
+    "#     # training for data val\n",
+    "#     with torch.no_grad() :\n",
+    "#         cost, acc = looping(\"val\", val_set, val_loader, model, criterion, optimizer, device)\n",
+    "#         val_cost.append(cost)\n",
+    "#         val_acc.append(acc)\n",
+    "    \n",
+    "#     print(\"Epochs : {}/{} | \".format(i+1, epochs),\n",
+    "#           \"train_cost : {} | \".format(train_cost[-1]),\n",
+    "#           \"val_cost : {} | \".format(val_cost[-1]),\n",
+    "#           \"train_acc : {} | \".format(train_acc[-1]),\n",
+    "#           \"val_cost : {} | \".format(val_cost[-1]),\n",
+    "#           'time {:.3f} s'.format(time.time() - since)\n",
+    "#          )\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eead17ad",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# test - 2\n",
+    "\n",
     "train_cost, val_cost = [], []\n",
     "train_acc, val_acc = [], []\n",
-    "for i in range (epochs) :\n",
+    "\n",
+    "#object early_stopping\n",
+    "early_stopping = EarlyStopping(patience=7, verbose=True)\n",
+    "\n",
+    "epoch = 1\n",
+    "while True :\n",
     "    since = time.time()\n",
     "    \n",
     "    # training for data train\n",
@@ -502,36 +614,23 @@
     "        cost, acc = looping(\"val\", val_set, val_loader, model, criterion, optimizer, device)\n",
     "        val_cost.append(cost)\n",
     "        val_acc.append(acc)\n",
-    "    \n",
-    "    print(\"Epochs : {}/{} | \".format(i+1, epochs),\n",
+    "        \n",
+    "    print(\"Epochs : {} | \".format(epoch),\n",
     "          \"train_cost : {} | \".format(train_cost[-1]),\n",
     "          \"val_cost : {} | \".format(val_cost[-1]),\n",
     "          \"train_acc : {} | \".format(train_acc[-1]),\n",
-    "          \"val_cost : {} | \".format(val_cost[-1]),\n",
+    "          \"val_acc : {} | \".format(val_acc[-1]),\n",
     "          'time {:.3f} s'.format(time.time() - since)\n",
     "         )\n",
+    "    epoch+=1\n",
+    "    \n",
+    "    early_stopping(val_cost[-1], model)\n",
+    "    #ealry stopping\n",
+    "    if early_stopping.early_stop:\n",
+    "            print(\"Early stopping\")\n",
+    "            break\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eead17ad",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb53cf06",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -541,7 +640,10 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Load Model \n",
+    "model.load_state_dict(torch.load('checkpoint.pt'))"
+   ]
   },
   {
    "cell_type": "code",
